# org-structure-api

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini
.deployment/: Dockerfile  docker-compose.yaml
.github/workflows/: build.yml
app/: logger.py  main.py  settings.py
app/db/crud/: __init__.py  base.py  departments.py  employees.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2026_03_09_1435-30ee9185bf6b_create_departments_and_employees_tables.py
app/db/models/: __init__.py  base.py  departments.py  employees.py
app/dependencies/: __init__.py
app/dependencies/exceptions/: __init__.py  http.py
app/managers/: __init__.py  departments.py  employees.py  utils.py
app/routers/: __init__.py
app/routers/api/: __init__.py  departments.py  health.py
app/schemas/: __init__.py  base.py  departments.py  employees.py  health.py  mixins.py
app/services/: postgresql.py
dev/: init_database.py
dev/tests/: conftest.py  utils.py
dev/tests/db/: test_departtments.py  test_emloyees.py
dev/tests/factories/: __init__.py  departments.py  employees.py
dev/tests/integrations/: test_departtments.py  test_emloyees.py
dev/tests/managers/: test_departtments.py  test_emloyees.py
