[project]
name = "org-structure-api"
version = "0.1.0"
description = "Test assignment: API for organizational structure"
authors = [
    { name = "Ilia", email = "fedorenkoilia@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.17.1",
    "asyncpg==0.30.0",
    "fastapi[all]==0.121.0",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "poethepoet==0.37.0",
    "sqlalchemy==2.0.44",
    "uvicorn==0.38.0",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.1.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff==0.14.3",
    "tzdata>=2025.3",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# ignore = ["E501", "PLR0911", "PLR0912", "PLR0915", "PLR0913", "PLW2901"]
ignore = [
    "PLR0913",  # too many positional arguments for method call
    "PLW2901",  # overwritten argument in 'for' loop
    "FAST001",  # FastAPI rule that warns when `response_model` duplicates return type hints.
    "FAST002",  # FastAPI rule that warns when `response_model` duplicates return type hints.
    "B008",     # warns about calling functions like `Query()` in default arguments.
]
select = [
    # flake8-bugbear
    "B",
    # pycodestyle
    "E",
    "W",
    "FAST",
    # pylint
    "PL",
    # pyflakes
    "F",
    # isort
    "I",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true

[tool.poe]
envfile = [".env"]
verbosity = 1

[tool.poe.executor]
type = "virtualenv"
location = ".venv"

[tool.poe.tasks.ruff-lint]
shell = "uv run ruff check --fix app tests"

[tool.poe.tasks.ruff-format]
shell = "uv run ruff format app tests"

[tool.poe.tasks.format]
sequence = [
    { ref = "ruff-lint" },
    { ref = "ruff-format" },
]

[tool.poe.tasks.create-migration]
cmd = "alembic revision --autogenerate -m \"${message}\""
args = { message = { options = ["-m"], default = "autogenerated_migration" } }

[tool.poe.tasks.apply-migrations]
cmd = "alembic upgrade head"

[tool.poe.tasks.revert-migration]
cmd = "alembic downgrade -1"

[tool.poe.tasks.dev]
cmd = "uvicorn --reload --use-colors --host 0.0.0.0 --port \"${port}\" --log-level debug app.main:app"
args = { port = { options = ["-p"], default = "8000" } }

[tool.poe.tasks.start-dev]
sequence = [
    { ref = "apply-migrations" },
    { ref = "dev" },
]

[tool.poe.tasks.prod]
cmd = "gunicorn -c app/gunicorn_conf.py app.main:app"

[tool.poe.tasks.start-prod]
sequence = [
    { ref = "apply-migrations" },
    { ref = "prod" },
]

[tool.poe.tasks.db-create]
cmd = "python -c 'from dev.init_database import main_create; main_create()'"

[tool.poe.tasks.db-drop]
cmd = "python -c 'from dev.init_database import main_drop; main_drop()'"

[tool.poe.tasks.test]
shell = "uv run pytest dev/tests -vv"
[tool.poe.tasks.test-managers]
shell = "uv run pytest dev/tests/managers -vv"
[tool.poe.tasks.test-integrations]
shell = "uv run pytest dev/tests/integrations -vv"
[tool.poe.tasks.test-db]
shell = "uv run pytest dev/tests/dv -vv"

